--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 Hello there, awesome person!
 <html>
+   <head>
+    <title>I am a title!</cars>
+</head>
     <body>
         The HTML content goes here.
     </body>
