--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<car>I am a title!</car>
 <html>
-   <head>
-    <title>I am a title!</cars>
-</head>
+    <head>
+        <title>I am a title!</title>
+    </head>
+
     <body>
-        The HTML content goes here.
+        Some content.
     </body>
 </html>
