--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
 
     <h1>
-         < https://avatars3.githubusercontent.com/u/47332100?v=4>
+         <img src="https://octodex.github.com/images/vinyltocat.png">
     </h1>
 </html>
