--- a/index.html
+++ b/index.html
@@ -8,3 +8,8 @@
          <img src="https://octodex.github.com/images/vinyltocat.png">
     </h1>
 </html>
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
