--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
     <li>Is an</li>
     <li>Unordered list</li>
 </ul>
-<li><a href="https://github.com">This is a link to GitHub!</a></li
+<li><a href="https://github.com">This is a link to GitHub!</a></li>
